[package]
name = "ulid-cli"
version = "0.1.0"
authors = ["Jonathan K. Wolski <jonathan.k.wolski@disney.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "ulid"
path = "src/main.rs"

[dependencies]
ulid = "0.3.1"
